Update project to deploy to infra

--- a/myDadApp/Pages/Index.cshtml
+++ b/myDadApp/Pages/Index.cshtml
@@ -12,7 +12,7 @@
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
-<h2 class="alert fw-bold" id="joke"></h2>
+<h2 class="alert fw-bold" style="background-color:@Config["FavoriteColor"]" id="joke"></h2>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script type="text/javascript">
