--- a/myDadApp/Pages/Shared/_Layout.cshtml
+++ b/myDadApp/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,9 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - myDadApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+                | <b>Machine:</b> @System.Environment.MachineName
+                | <b>OS:</b> @System.Environment.OSVersion
+                | <b>Framework:</b> @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription
         </div>
     </footer>
 
